--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,13 @@
 #root {
   max-width: 1280px;
   width: 100%;
-
   padding: 1rem;
   text-align: center;
 }
 
+body {
+  height: -webkit-fill-available;
+}
 
 .card {
   padding: 2em;
